mari-vanna-website/src/App.css
/* Career-Component */
	
.career--banner{
  width: 100%;
  height: 421px;
  margin-bottom: 6%;
}

.career--careerOportunitiesTitle {
  width: 544px;
  height: 61px;
  font-family: 'Lato', sans-serif;
  font-size: 30px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 0.1px;
  text-align: center;
  color: var(--black);
  display: inline;
  margin-left: 33%;
}

.career--careerOportunitiesParagraph{
  width: 1287px;
  height: 54px;
  font-family:'Lato', sans-serif ;
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 2.4px;
  color: var(--black);
  text-align: center;
  margin-left: 5%;
  margin-top: 6%;
}

@import url('https://fonts.googleapis.com/css?family=Lato:300');
@import url("https://p.typekit.net/p.css?s=1&k=gsw5tei&ht=tk&f=5624.5626.5736.5738.5661.5663&a=9521813&app=typekit&e=css");

/* Drinks--Component */

.drinks--alcoholicDrinks{
  margin-top:160px;
  margin-right: 35%;
}

.drinks-image{
  width: 1439.7px;
  height: 421px;
}

.drinks--mainTitle{
  width: 169px;
  height: 61px;
  font-family:'Lato', sans-serif;
  font-size: 45px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 0.1px;
  margin-left: 44%; 
}
.drinks--vodkaMenu{
  font-size: 24px;
  /* font-family: 'Lato', sans-serif; */
  
  line-height: 0.63;
  color: #ee343c;
  margin-left: 16%;
}
.drinks--vodkaDescription{
  width: 547px;
  height: 50px;
  font-family: 'Lato', sans-serif;
  font-weight: bold;
  margin-left: 16%;
}
.drinks--vodkaFlavors1{
  width: 213px;
  height: 207px;
  font-family: 'Lato', sans-serif;
  font-size: 20px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.15;
  letter-spacing: 2.4px;
  color: #0e0e0e;
  list-style: none;
 
}
.drinks--vodkaFlavors2{
  width: 213px;
  height: 207px;
  font-family: 'Lato', sans-serif;
  font-size: 20px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.15;
  letter-spacing: 2.4px;
  color: #0e0e0e;
  list-style: none;
}

.drinks-vodkaPrices{
  width: 213px;
  height: 135px;
  font-family: 'Lato', sans-serif;
  font-size: 15px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.35;
  letter-spacing: 2.3px;
  color: #0e0e0e;
  list-style: none;
}

.drinks--vodkaFlights{
  width: 250px;
  height: 54px;
  font-family: 'Lato', sans-serif;
  font-size: 15px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.35;
  letter-spacing: 2.3px;
  color: #0e0e0e;
  list-style: none;
 
}

.drinks--nonAlcoholicDrinks--title{
  font-size: 24px;
  font-weight: bold;
  color: #ee343c;
  margin-left: 18%;
}
.drinks--nonAlcoholicDrinks--items{
  width: 509px;
  height: 575px;
  font-family: 'Lato', sans-serif;
  font-size: 20px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 2.1;
  letter-spacing: 2.9px;
  color: #060606;
  list-style: none;
  margin-left: 12%;
  
}
.drinks--vodkaAllItems{
  width: 70%;
  height: 400%;
  display: flex;
  flex-direction:column;
  flex-flow:row wrap;
  flex-wrap: wrap;
  margin-left: 13%;
  

  
}
.drinks--nonAlcoholicDrinks--mainContainer{
  margin-top: -567px;
  margin-left: 727px;
  border-left: 1px solid black;
}


/* ===== Info ===== */

.info__container {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.info__top-row {
  display: flex;
}

.info__bottom-row {
  display: flex;
}

.info__text-right,
.info__text-left {
  font-size: 18px;
  margin: 49px;
  font-family: 'Lato', sans-serif;
}

.info__text {
  display: flex;
  width: 50%;
  height: 476px;
}

.info__doll-image,
.info__storefront-image {
  display: flex;
  width: 50%;
  height: 476px;
}

/* HEADER  */

.header {
  display: flex;
  justify-content: flex-end;
  background-color: #ee343c;
  color: #ffffff;
  height: 80px;
  line-height: 80px;
  font-size: 22px;
  font-family: 'p22-underground', sans-serif;
}

.header__title {
  width: 50%;
  letter-spacing: 10px;
  margin-left: 40px;
}

.header__navbar {
  width: 50%;
  display: flex;
  font-size: 18px;
  letter-spacing: 1px;
  justify-content: flex-end;
  margin-right: 40px;
}

.header__atag {
  color: #ffffff;
  margin: 0 25px;
  font-weight: normal;
}

/* ======== Dessert ========= */
.dessertpage__container {
  display: flex;
  flex-direction: column;
}

.dessertpage__image {
  width: 100%;
}

.dessertpage__menu {
  display: flex;
  flex-direction: column;
  align-self: center;
  margin-bottom: 120px;
}

.dessertpage__title {
  font-family: 'Lato', sans-serif;
  font-size: 30px;
  text-transform: uppercase;
  font-weight: bolder;
  margin: 40px;
  text-align: center;
}

.dessertpage__menu-item {
  display: flex;
  align-items: center;
}

.dessertpage__menu-item-bold {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: bold;
}

.dessertpage__menu-item-text {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  margin-left: 5px;
} 

/* ICON BAR */

.iconbar {
  font-size: 14px;
  height: 211px;
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  text-align: center;
}

.iconbar__address--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 32px;
 }

.iconbar__hours--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 42px;
}

.iconbar__contact--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 42px;
}

.iconbar__check--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 42px;
}

.iconbar__h3 {
  font-family: 'p22-underground', sans-serif;
  letter-spacing: 1px;
  margin-top: 18px;
}

.iconbar__text {
  font-style: italic;
  font-family:"minion-pro";
  margin-top: -5px;
}

/* Dinner page */

.dinnerpage__container {
  display: flex;
  flex-direction: column;
}

.dinnerpage__image {
  width: 100%;
}
/* ... */

